styles.css
/*

Table of contents

1. CSS reset
2. Variable declarations
3. Font styling
4. General - Elements
5. General - Classes

*/

/*

1. CSS reset

http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)

*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
*,
*::before,
*::after {
  box-sizing: border-box;
}
a {
  text-decoration: none;
  color: inherit;
}

/*

2. Variable declarations

*/

:root {
  --surface: #131318;
  --surface-bright: #39393f;
  --on-surface: #e4e1e9;
  --primary: #bcc2ff;
  --primary-container: #3b4279;
  --on-primary-container: #dfe0ff;
}

/* 

3. Font styling

*/

html {
  font-size: 62.5%;
  font-family: roboto, sans-serif;
}

body {
  font-size: 1.6rem;
}

/*

4. General - Elements

*/

body {
  background-color: var(--surface);
}

button {
  cursor: pointer;
  border: none;
  background-color: transparent;
}

header {
  background-color: var(--primary-container);
  color: var(--on-primary-container);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.6rem 2rem 0.6rem 2rem;
}

main {
  max-width: 120rem;
}

nav {
  display: none;
  position: absolute;
  top: 4rem;
  left: 50%;
  transform: translateX(-50%);
  background-color: var(--surface-bright);
  color: var(--on-surface);
  border-radius: 1rem;
  z-index: 20;
}

/*

5. General - Classes

*/

.logoContainer {
  display: flex;
  align-items: end;
  gap: 0.6rem;
  order: 2;
}

.logoName {
  font-size: 2.8rem;
  font-weight: bold;
  margin-bottom: -0.2rem;
}

.logo {
  width: 3rem;
}

.navContainer {
  order: 1;
}

.toggleMobileNavVisibilityButton {
  border-radius: 100%;
  padding: 0.5rem;
  transition: transform 0.2s ease-in-out;
}

.toggleMobileNavVisibilityButton:hover {
  background-color: rgba(0, 0, 0, 0.2);
  transform: translateY(-0.2rem);
}

.showMobileNav {
  display: flex;
}

.navCloseButton {
  position: absolute;
  top: 1.2rem;
  right: 0.5rem;
}

.navItems {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  font-size: 2.4rem;
  list-style: none;
  padding: 4rem 6rem 4rem 6rem;
}

.scrim {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 10;
}

.scrim.show {
  display: block;
}

.mainContainer {
  display: flex;
  align-items: center;
  flex-direction: column;
}

.homeHeroContainer {
  display: flex;
  overflow: hidden;
  align-items: center;
  align-items: center;
  max-height: 40rem;
}

.homeHero {
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
}

/*

6. Media queries

*/

@media screen and (min-width: 700px) {
  .navContainer {
    order: 2;
  }

  .logoContainer {
    order: 1;
  }

  nav {
    display: block;
    position: unset;
    transform: unset;
    background-color: unset;
  }

  .navCloseButton,
  .scrim.show,
  .toggleMobileNavVisibilityButton {
    display: none;
  }

  .navItems {
    flex-direction: row;
    font-size: 1.8rem;
    padding: 0;
  }
}

